--- a/typst.toml
+++ b/typst.toml
@@ -1,18 +1,16 @@
 # for a description of available keys, see https://github.com/typst/packages/?tab=readme-ov-file#package-format
 
 [package]
-name = ""
+name = "dining-table"
 version = "0.1.0"
 entrypoint = "src/lib.typ"
-authors = []
+authors = ["James R. Swift"]
 license = "Unlicense"
-description = ""
-homepage = ""
-repository = ""
-keywords = []
-categories = []
-disciplines = []
-compiler = ""
+description = "Column-wise table definitions for big data"
+repository = "https://github.com/JamesxX/dining-table"
+keywords = ["table", "data", "scientific"]
+categories = ["components", "visualization", "model", "report", "paper", "thesis"]
+disciplines = ["agriculture", "biology", "chemistry", "communication", "computer-science", "economics", "physics"]
 exclude = [
 	".github",
 	"docs",
@@ -21,11 +19,3 @@ exclude = [
 	".typstignore",
 	"Justfile",
 ]
-
-# [template]
-# path = "template"
-# entrypoint = "main.typ"
-# thumbnail = "thumbnail.png"
-
-# [tool.mytool]
-# foo = "bar"
