--- a/typst.toml
+++ b/typst.toml
@@ -9,7 +9,7 @@ license = "Unlicense"
 description = "Column-wise table definitions for big data"
 repository = "https://github.com/JamesxX/dining-table"
 keywords = ["table", "data", "scientific"]
-categories = ["components", "visualization", "model", "report", "paper", "thesis"]
+categories = ["components", "visualization", "model"]
 disciplines = ["agriculture", "biology", "chemistry", "communication", "computer-science", "economics", "physics"]
 exclude = [
 	".github",
